welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:4: error: illegal start of simple pattern
    for ()i<-1 to 2){
         ^MethodsDogHouse:9: error: illegal start of simple expression
  }
  ^